Bug 67546 - EDITING: related fields not shown if key is set as "bigint unsigned" on mysql
Summary: EDITING: related fields not shown if key is set as "bigint unsigned" on mysql
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Lionel Elie Mamane
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-30 16:10 UTC by Knut Esztermann
Modified: 2013-08-14 21:58 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Knut Esztermann 2013-07-30 16:10:45 UTC
With the 4.1 version base no longer shows related fields of 1:n relationships in subforms of a mysql (native) db. A little experimenting showed that this happens only when the primary key is set to "bigint unsigned". "bigint" alone works, as do "int unsigned".

Steps to reproduce:

1. create a simple mysql database

  CREATE TABLE `series` (
    `id` bigint unsigned NOT NULL AUTO_INCREMENT,
    `title` varchar(255) NOT NULL,
    PRIMARY KEY (`id`)
  )

  CREATE TABLE `episode` (
    `id` bigint unsigned NOT NULL AUTO_INCREMENT,
    `series_id` bigint unsigned DEFAULT NULL,
    `title` varchar(255) NOT NULL,
    PRIMARY KEY (`id`)
  )

2. link this db to LibreOffice base and create a simple form with the wizard

  Table "series", add subform, Table "episode", join "series_id" and "id"

3. you can enter data in both tables, but stored data in the "episode" table is not shown once you change the active record in the "series" table.
Comment 1 Robert Großkopf 2013-08-06 06:02:16 UTC
Could you please describe, which version of connector you are using? There is no direct LO-connector working with LO 4.1.* and Linux-rpm.
Comment 2 Knut Esztermann 2013-08-06 09:46:23 UTC
I wasn't aware of it, but it seems as if it's a version provided
by the debian package manager. The package is
libreoffice-mysql-connector 1.0.2+LibO4.1.0-4 (debian sid).


/ Knut Esztermann
Comment 3 Knut Esztermann 2013-08-06 10:07:10 UTC
Just tried with the JDBC connector, same problem there.


/ Knut Esztermann
Comment 4 Commit Notification 2013-08-14 15:45:46 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d805c470845c89a54bfc50ec7d75dfba670d8b21

fdo#67546 handle unsigned 64 bit integers



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Lionel Elie Mamane 2013-08-14 15:46:38 UTC
Fixed for values of the key between 0 and 2^63-1 for 4.1.x and for values between 2^63 and 2^64-1 for 4.2.0.
Comment 6 Commit Notification 2013-08-14 21:58:44 UTC
Lionel Elie Mamane committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d1cb302bc47b553ac2f6e126f19ea75f69564f18&h=libreoffice-4-1

fdo#67546 handle unsigned 64 bit integers


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.