fdo#67546 handle unsigned 64 bit integers

Change-Id: I09453c73303076318b7105a778ff98695b0a3839